k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
  namespace: ${SERVICE_NAME}
  labels: 
     app: ${SERVICE_NAME}
     managed-by: terraform
     platfrom: idp
spec:
  type: NodePort
  selector:
    app: ${SERVICE_NAME}
  ports:
      - name: http
        port: 8087
        targetPort: 8087
        nodePort: 30080
